# cli_code

./: .gitignore  README.md  TESTS_README.md  example.py  pyproject.toml
src/cli_coding_agent/: __main__.py  config.py
src/cli_coding_agent/adapters/: claude_adapter.py
src/cli_coding_agent/adapters/storage/: sqlite_adapter.py
src/cli_coding_agent/agent/: __init__.py  agent.py  agent_config.py  agent_instructions.py  db_and_session.py  tools.py
src/cli_coding_agent/agent/tools/: __init__.py  agno_tools.py  agno_wrappers.py  base.py  command_operations.py  examples.py  file_operations.py  search_operations.py  system_operations.py  tools.py
src/cli_coding_agent/application/: chat_service.py  cli.py
src/cli_coding_agent/domain/: schemas.py
src/cli_coding_agent/ports/: ai_model_port.py  storage_port.py
src/cli_coding_agent/utils/: env_checker.py
tests/: README.md  __init__.py  conftest.py  sandbox.py  test_agno_tools.py
