[project]
name = "cli-code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.2",
    "anthropic>=0.51.0",
    "openai>=1.79.0",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.15.4",
]

[project.scripts]
clicode = "src.cli_coding_agent.application.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
cli-code-agent = { workspace = true }

[dependency-groups]
dev = [
    "cli-code-agent",
    "black>=25.1.0",
    "codespell>=2.4.1",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]
