[project]
name = "cli-code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.2",
    "anthropic>=0.51.0",
    "openai>=1.79.0",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.15.4",
    "aiofiles>=24.1.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.25.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-cpp>=0.20.0",
    "tree-sitter-c>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "pypdf2>=3.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "psutil>=5.9.0",
]

[project.scripts]
clicode = "src.cli_coding_agent.application.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
cli-code-agent = { workspace = true }

[dependency-groups]
dev = [
    "cli-code-agent",
    "black>=25.1.0",
    "codespell>=2.4.1",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
